--- a/1/pom.xml
+++ b/1/pom.xml
@@ -175,6 +175,7 @@ under the License.
 							<goal>shade</goal>
 						</goals>
 						<configuration>
+
 							<artifactSet>
 								<excludes>
 									<!-- This list contains all dependencies of flink-dist
@@ -271,7 +272,6 @@ under the License.
 									<mainClass>psd.StreamingJob</mainClass>
 								</transformer>
 							</transformers>
-
 							<createDependencyReducedPom>false</createDependencyReducedPom>
 						</configuration>
 					</execution>
@@ -290,15 +290,22 @@ under the License.
 			<plugin>
 				<groupId>net.alchim31.maven</groupId>
 				<artifactId>scala-maven-plugin</artifactId>
+
 				<version>3.1.4</version>
+
 				<executions>
 					<execution>
 						<goals>
 							<goal>compile</goal>
 							<goal>testCompile</goal>
 						</goals>
+						<configuration>
+							<addScalacArgs>-target:jvm-1.8</addScalacArgs>
+							<args>-target:jvm-1.8</args>
+						</configuration>
 					</execution>
 				</executions>
+
 			</plugin>
 
 			<!-- Eclipse Integration -->
