--- a/1/pom.xml
+++ b/1/pom.xml
@@ -113,6 +113,13 @@ under the License.
 			<artifactId>postgresql</artifactId>
 			<version>42.3.5</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.typesafe/config -->
+		<dependency>
+			<groupId>com.typesafe</groupId>
+			<artifactId>config</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+
 
 
 
