--- a/1/src/main/resources/application.conf
+++ b/1/src/main/resources/application.conf
@@ -1,8 +1,8 @@
 app {
-    databaseUrl : "jdbc:postgresql://localhost:5432/psdtest"
+    databaseUrl : "jdbc:postgresql://localhost:5432/psd_db"
     databaseUser : "postgres"
     databasePassword : "qwerty"
-    PathFile: "./alert.csv"
+    PathFile: "/var/log/alert.csv"
     growthFactor: 5
     limit: 500
     time: 10
